chore: migrate cs management int tests to new testing framework
Refs: XRDDEV-3043

--- a/src/central-server/management-service/application/src/main/resources/application-int-test.yml
+++ b/src/central-server/management-service/application/src/main/resources/application-int-test.yml
@@ -3,6 +3,17 @@ server:
   ssl:
     enabled: false
 
+spring:
+  cloud:
+    vault:
+      enabled: false
+
+xroad:
+  common-rpc:
+    use-tls: false
+  management-service:
+    api-base-url: http://mock-server:1080
+
 logging:
   level:
     ROOT: INFO
