--- a/.github/workflows/_test-central-server.yml
+++ b/.github/workflows/_test-central-server.yml
@@ -21,57 +21,58 @@ on:
         type: string
 
 jobs:
-  test-central-server:
-    name: Run Central Server system tests
+  test-cs-system:
+    name: CS System Tests
     runs-on: ubuntu-24.04
     steps:
       - name: Start Measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
         with:
           task: start-measurement
-          label: 'Central Server system tests'
+          label: 'cs-system-test'
 
       - uses: actions/checkout@v5
         with:
           ref: ${{ inputs.ref }}
 
-      - name: Setup build environment
-        uses: ./.github/actions/setup-build-env
+      - name: Download cs-system-test
+        uses: actions/download-artifact@v4
         with:
-          gradle-cache-read-only: true
-          free-disk-space: false
+          name: cs-system-test-jar
 
-      - name: Login to GitHub Container Registry
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Central Server test setup measurement
+      - name: Setup measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
         with:
           task: get-measurement
-          label: 'Set up Central Server tests'
+          label: 'cs-system-test setup'
 
-      - name: Run Central Server system tests
-        working-directory: ./src
-        run: |
-          ./gradlew -Dorg.gradle.jvmargs=-Xmx2g \
-          :central-server:admin-service:ui-system-test:systemTest \
-          -PsystemTestCsImageName=${{ inputs.image_registry }}/central-server-dev:${{ inputs.service_image_tag }}
+      - name: Run cs-system-test
+        run: java -jar central-server-system-test.jar
 
-      - name: Log storage after tests
+      - name: Log storage
         if: always()
         uses: ./.github/actions/log-storage
         with:
-          label: 'Storage After Central Server Tests'
+          label: 'cs-system-test storage'
 
-      - name: Test Central Server measurement
+      - name: Test measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
         with:
           task: get-measurement
-          label: 'Test Central Server'
+          label: 'cs-system-test'
 
       - name: Test report
         env:
@@ -79,23 +80,19 @@ jobs:
         uses: dorny/test-reporter@v2
         if: success() || failure()
         with:
-          name: Central Server system test
-          path: src/central-server/admin-service/ui-system-test/build/test-results/**/TEST-*.xml
+          name: cs-system-test
+          path: test-framework-working-dir/test-results/TEST-*.xml
           reporter: java-junit
 
-      - name: Fix permissions for CS logs
-        if: failure()
-        run: |
-          sudo chmod -R a+rX src/central-server/admin-service/ui-system-test/build/cs-container-logs/ || true
-
-      - name: Upload CS report
-        uses: actions/upload-artifact@v5
-        if: failure()
+      - name: Upload cs-system-test report
+        uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: CS System Test report
+          name: cs-system-test-report
           path: |
-            src/central-server/admin-service/ui-system-test/build/allure-report/
-            src/central-server/admin-service/ui-system-test/build/cs-container-logs/
+            test-framework-working-dir/allure-results/
+            test-framework-working-dir/container-logs/
+            test-framework-working-dir/test-automation-exec.log
 
       - name: Show Energy Results
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
@@ -106,7 +103,7 @@ jobs:
       - name: Upload GMT jsons
         uses: actions/upload-artifact@v5
         with:
-          name: CS System Test GMT jsons
+          name: cs-system-test-gmt
           path: |
             /tmp/eco-ci/lap-data.json
             /tmp/eco-ci/total-data.json
