chore: improve ci job naming
Refs: XRDDEV-3043

--- a/.github/workflows/_test-central-server.yml
+++ b/.github/workflows/_test-central-server.yml
@@ -22,7 +22,7 @@ on:
 
 jobs:
   test-cs-system:
-    name: CS System Tests
+    name: cs-system-test
     runs-on: ubuntu-24.04
     steps:
       - name: Start Measurement
