--- a/.github/workflows/_test-security-server.yml
+++ b/.github/workflows/_test-security-server.yml
@@ -22,7 +22,7 @@ on:
 
 jobs:
   test-ss-system:
-    name: SS System Tests
+    name: ss-system-test
     runs-on: ubuntu-24.04
     steps:
       - name: Start Measurement
