--- a/.github/workflows/_test-services.yml
+++ b/.github/workflows/_test-services.yml
@@ -22,7 +22,7 @@ on:
 
 jobs:
   test-signer:
-    name: Signer Integration Tests
+    name: signer-int-test
     runs-on: ubuntu-24.04
     steps:
       - name: Start Measurement
@@ -102,7 +102,7 @@ jobs:
           pr-comment: true
 
   test-opmonitor:
-    name: Op-Monitor Integration Tests
+    name: opmonitor-int-test
     runs-on: ubuntu-24.04
     steps:
       - name: Start Measurement
@@ -182,7 +182,7 @@ jobs:
           pr-comment: true
 
   test-cs-admin:
-    name: CS Admin Integration Tests
+    name: cs-admin-int-test
     runs-on: ubuntu-24.04
     steps:
       - name: Start Measurement
@@ -255,7 +255,7 @@ jobs:
           pr-comment: true
 
   test-cs-management:
-    name: CS Management Integration Tests
+    name: cs-management-int-test
     runs-on: ubuntu-24.04
     steps:
       - name: Start Measurement
