--- a/.github/workflows/_test-central-server.yml
+++ b/.github/workflows/_test-central-server.yml
@@ -24,6 +24,7 @@ jobs:
   test-cs-system:
     name: cs-system-test
     runs-on: ubuntu-24.04
+    timeout-minutes: 40
     steps:
       - name: Start Measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
