--- a/.github/workflows/_test-e2e.yml
+++ b/.github/workflows/_test-e2e.yml
@@ -24,6 +24,7 @@ jobs:
   test-e2e:
     name: e2e-test
     runs-on: ubuntu-24.04
+    timeout-minutes: 40
     steps:
       - name: Start Measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
