--- a/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
+++ b/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
@@ -139,7 +139,12 @@ services:
           - mock-server
     volumes:
       - ./nginx-container-files/etc/nginx/conf.d:/etc/nginx/conf.d
-
+    deploy:
+      resources:
+        reservations:
+          memory: 32M
+        limits:
+          memory: 256M
   testmailserver:
     image: axllent/mailpit
     environment:
