chore: reduce test flakyness
Refs: XRDDEV-3043

--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
@@ -1,3 +1,9 @@
+quarkus:
+  log:
+    level: INFO
+    category:
+      "org.niis.xroad.proxy.core.healthcheck":
+        level: DEBUG
 xroad:
   common-rpc:
     certificate-provisioning:
