--- a/src/central-server/registration-service/src/main/resources/application.yml
+++ b/src/central-server/registration-service/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   config:
     import:
       - classpath:/xroad-common.yaml
+      - optional:file:/etc/xroad/conf.d/local-tls.yaml
+      - optional:file:/etc/xroad/conf.d/local.yaml
   servlet:
     multipart:
       enabled: false
