refactor: SystemProperties refactor
tests

Refs: XRDDEV-3029

--- a/src/tool/migration-cli/src/test/resources/local-test.ini
+++ b/src/tool/migration-cli/src/test/resources/local-test.ini
@@ -3,6 +3,18 @@
 ; parameters in the local.ini file.
 
 ; =============================================================================
+; Configuration parameters for Central Server admin, registration, management services
+[center]
+conf-backup-path = /var/lib/xroad/backup/
+internal-directory = internalconf
+external-directory = externalconf
+
+auto-approve-owner-change-requests = false
+
+; Properties file of database configuration parameters
+database-properties=/etc/xroad/db.properties
+
+; =============================================================================
 ; Configuration parameters for Client and Server Proxy.
 
 [proxy]
