chore: use containerized chromium instead of host browser
Refs: XRDDEV-3043

--- a/src/central-server/admin-service/ui-system-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/central-server/admin-service/ui-system-test/src/intTest/resources/compose.intTest.yaml
@@ -18,3 +18,12 @@ services:
           memory: 768M
         limits:
           memory: 2048M
+  browser:
+    image: ${SELENIUM_IMG}
+    environment:
+      - SE_SCREEN_WIDTH=1920
+      - SE_SCREEN_HEIGHT=1080
+      - TZ=Europe/Vilnius
+    shm_size: 2g
+    ports:
+      - "0:4444"
