--- a/.github/workflows/_test-central-server.yml
+++ b/.github/workflows/_test-central-server.yml
@@ -89,9 +89,9 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: cs-system-test-report
+          name: cs-system-test-report-${{ github.run_number }}
           path: |
-            test-framework-working-dir/allure-results/
+            test-framework-working-dir/allure-report/index.html
             test-framework-working-dir/container-logs/
             test-framework-working-dir/test-automation-exec.log
 
