--- a/.github/workflows/_test-e2e.yml
+++ b/.github/workflows/_test-e2e.yml
@@ -92,9 +92,9 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: e2e-test-report
+          name: e2e-test-report-${{ github.run_number }}
           path: |
-            test-framework-working-dir/allure-results/
+            test-framework-working-dir/allure-report/index.html
             test-framework-working-dir/container-logs/
             test-framework-working-dir/test-automation-exec.log
 
