--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -129,6 +129,7 @@ test-selenide-grid = { module = "com.codeborne:selenide-grid", version.ref = "te
 test-allure-selenide = { module = "io.qameta.allure:allure-selenide", version.ref = "testAllure" }
 test-allure-cucumber7 = { module = "io.qameta.allure:allure-cucumber7-jvm", version.ref = "testAllure" }
 test-allure-junitPlatform = { module = "io.qameta.allure:allure-junit-platform", version.ref = "testAllure" }
+test-allure-commandline = { module = "io.qameta.allure:allure-commandline", version.ref = "testAllure" }
 test-restassured = { module = "io.rest-assured:rest-assured", version = "5.5.6" }
 
 cucumber-java = { module = "io.cucumber:cucumber-java", version.ref= "testCucumber" }
@@ -228,7 +229,6 @@ archUnitGradlePlugin = { module = "com.societegenerale.commons:arch-unit-gradle-
 protobufGradlePlugin = { module = "com.google.protobuf:com.google.protobuf.gradle.plugin", version.ref = "protobufPlugin" }
 quarkusGradlePlugin = { module = "io.quarkus:gradle-application-plugin", version.ref = "quarkus" }
 shadowGradlePlugin = { module = "com.gradleup.shadow:shadow-gradle-plugin", version.ref = "shadowPlugin" }
-allureGradlePlugin = { module = "io.qameta.allure:io.qameta.allure.gradle.plugin", version.ref = "allurePlugin" }
 
 [bundles]
 metrics = ["metrics-core"]
@@ -254,4 +254,3 @@ jandex = { id = "org.kordamp.gradle.jandex", version = "2.2.0" }
 frontendJDK21 = { id = "org.siouan.frontend-jdk21", version = "10.0.0" }
 shadow = { id = "com.gradleup.shadow", version.ref = "shadowPlugin" }
 archUnit = { id = "com.societegenerale.commons.arch-unit-gradle-plugin", version.ref = "archUnitPlugin" }
-allure = { id = "io.qameta.allure", version.ref = "allurePlugin" }
