--- a/development/k8s/terraform/environments/dev/override-values/security-server-values.yaml
+++ b/development/k8s/terraform/environments/dev/override-values/security-server-values.yaml
@@ -1,19 +1,20 @@
+global:
+  image:
+    registry: localhost:5555
+    tag: latest
+
 init:
   serverconf:
-    image: localhost:5555/ss-db-serverconf-init:latest
     dbUsername: serverconf
     proxyUiSuperuser: xrd
     proxyUiSuperuserPassword: "$argon2id$v=19$m=16384,t=2,p=1$YXF3YXN6eHh6c2F3cQ$+llp8EbxlqZaF2uO/BLoFLwfqxe1Yn6BvC/DOegq6A0"
   messagelog:
-    image: localhost:5555/ss-db-messagelog-init:latest
     dbUsername: messagelog
   opmonitor:
-    image: localhost:5555/ss-db-opmonitor-init:latest
     dbUsername: opmonitor
 
 services:
   configuration-client:
-    image: localhost:5555/ss-configuration-client:latest
     env:
       XROAD_CONFIGURATION_CLIENT_UPDATE_INTERVAL: "10"
       QUARKUS_VAULT_TLS_CA_CERT: "/etc/xroad/ssl/openbao.crt"
@@ -29,7 +30,6 @@ services:
         subPath: openbao.crt
         name: configuration-client-openbao-tls-certificate
   signer:
-    image: localhost:5555/ss-signer:latest
     env:
       QUARKUS_VAULT_TLS_CA_CERT: "/etc/xroad/ssl/openbao.crt"
     extraVolumes:
@@ -44,7 +44,6 @@ services:
         subPath: openbao.crt
         name: signer-openbao-tls-certificate
   proxy:
-    image: localhost:5555/ss-proxy:latest
     env:
       XROAD_PROXY_ADDON_OP_MONITOR_ENABLED: "true"
       QUARKUS_VAULT_TLS_CA_CERT: "/etc/xroad/ssl/openbao.crt"
@@ -60,7 +59,6 @@ services:
         subPath: openbao.crt
         name: proxy-openbao-tls-certificate
   proxy-ui-api:
-    image: localhost:5555/ss-proxy-ui-api:latest
     env:
       SPRING_CLOUD_VAULT_SSL_TRUST_STORE: "file:/etc/xroad/ssl/openbao.crt"
       SPRING_CLOUD_VAULT_SSL_TRUST_STORE_TYPE: "PEM"
@@ -76,7 +74,6 @@ services:
         subPath: openbao.crt
         name: proxy-ui-openbao-tls-certificate
   monitor:
-    image: localhost:5555/ss-monitor:latest
     env:
       QUARKUS_VAULT_TLS_CA_CERT: "/etc/xroad/ssl/openbao.crt"
     extraVolumes:
@@ -91,7 +88,6 @@ services:
         subPath: openbao.crt
         name: monitor-openbao-tls-certificate
   op-monitor:
-    image: localhost:5555/ss-op-monitor:latest
     enabled: true
     env:
       QUARKUS_VAULT_TLS_CA_CERT: "/etc/xroad/ssl/openbao.crt"
@@ -107,7 +103,6 @@ services:
         subPath: openbao.crt
         name: op-monitor-openbao-tls-certificate
   backup-manager:
-    image: localhost:5555/ss-backup-manager:latest
     env:
       SERVERCONF_INIT_IMAGE: localhost:5555/ss-db-serverconf-init:latest
       SERVERCONF_INITIALIZED_WITH_PROXY_UI_SUPERUSER: "true"
