feat: As a Developer I want to replace our charting library for a library that has a better license so that we don't have licensing issues
refs: XRDDEV-3049

--- a/src/security-server/admin-service/ui/package.json
+++ b/src/security-server/admin-service/ui/package.json
@@ -19,9 +19,9 @@
   },
   "dependencies": {
     "@niis/shared-ui": "workspace:*",
-    "apexcharts": "^5.3.6",
+    "echarts": "^6.0.0",
     "maska": "^3.2.0",
-    "vue3-apexcharts": "^1.10.0"
+    "vue-echarts": "^8.0.1"
   },
   "devDependencies": {
     "@pinia/testing": "^1.0.3",
