--- a/src/security-server/e2e-test/src/intTest/resources/msglog_encryption_config/application.yaml
+++ b/src/security-server/e2e-test/src/intTest/resources/msglog_encryption_config/application.yaml
@@ -9,4 +9,6 @@ xroad:
         default-key-id: 3BD9C292C63580F8
         grouping-strategy: SUBSYSTEM
         grouping-keys:
+          "not/existing/member": 8A4BB80EEE081BDE
           "DEV/COM/4321": E93952B01C2D2EA5,8A4BB80EEE081BDE
+          "another/fake/member": 1234567890ABCDEF # not existing key
