refactor: SystemProperties refactor
make central server image work with local(-tls).yaml

Refs: XRDDEV-3029

--- a/src/central-server/admin-service/ui-system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
+++ b/src/central-server/admin-service/ui-system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
@@ -4,3 +4,5 @@ xroad:
     global-configuration-generation-rate-in-seconds: 5
   configuration-client:
     update-interval: 10
+  signer:
+    enforce-token-pin-policy: true
