fix: Softtoken signer image pull for github

--- a/development/docker/security-server/env.template
+++ b/development/docker/security-server/env.template
@@ -16,6 +16,7 @@ OP_MONITOR_INIT_IMG=localhost:5555/ss-db-opmonitor-init:7.8.0-SNAPSHOT
 CONFIGURATION_CLIENT_IMG=localhost:5555/ss-configuration-client:7.8.0-SNAPSHOT
 MONITOR_IMG=localhost:5555/ss-monitor:7.8.0-SNAPSHOT
 SIGNER_IMG=localhost:5555/ss-signer:7.8.0-SNAPSHOT
+SOFTTOKEN_SIGNER_IMG=localhost:5555/ss-softtoken-signer:7.8.0-SNAPSHOT
 PROXY_IMG=localhost:5555/ss-proxy:7.8.0-SNAPSHOT
 PROXY_UI_IMG=localhost:5555/ss-proxy-ui-api:7.8.0-SNAPSHOT
 BACKUP_MANAGER_IMG=localhost:5555/ss-backup-manager:7.8.0-SNAPSHOT
