docs: Update account-keystore-password property details in the documentation

--- a/src/packages/src/xroad/default-configuration/acme.example.yml
+++ b/src/packages/src/xroad/default-configuration/acme.example.yml
@@ -27,6 +27,6 @@ eab-credentials:
           kid: kid123
           mac-key: goodlongsecretwordthatisnotshort
 
-# This is a password of the ACME Server account PKCS #12 keystore that is populated automatically by the Security Server.
+# This is the password for the PKCS #12 keystore of the ACME Server account. The password is defined by the Security Server Administrator. The "<PASSWORD_PLACEHOLDER>" value is a placeholder and must be changed.
 # Keystore is at /etc/xroad/ssl/acme.p12
-account-keystore-password: acmep12Password1234
+account-keystore-password: <PASSWORD_PLACEHOLDER>
