--- a/.github/workflows/_test-services.yml
+++ b/.github/workflows/_test-services.yml
@@ -102,6 +102,87 @@ jobs:
           task: display-results
           pr-comment: true
 
+  test-softtoken-signer:
+    name: softtoken-signer-int-test
+    runs-on: ubuntu-24.04
+    timeout-minutes: 30
+    steps:
+      - name: Start Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v5.1
+        with:
+          task: start-measurement
+          label: 'softtoken-signer-int-test'
+
+      - uses: actions/checkout@v5
+        with:
+          ref: ${{ inputs.ref }}
+
+      - name: Download softtoken-signer-int-test
+        uses: actions/download-artifact@v4
+        with:
+          name: softtoken-signer-int-test-jar
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v5.1
+        with:
+          task: get-measurement
+          label: 'softtoken-signer-int-test setup'
+
+      - name: Run softtoken-signer-int-test
+        run: java -jar softtoken-signer-int-test-1.0.jar
+
+      - name: Log storage
+        if: always()
+        uses: ./.github/actions/log-storage
+        with:
+          label: 'softtoken-signer-int-test storage'
+          show-docker-images: 'true'
+
+      - name: Test measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v5.1
+        with:
+          task: get-measurement
+          label: 'softtoken-signer-int-test'
+
+      - name: Test report
+        env:
+          NODE_OPTIONS: '--max-old-space-size=6144'
+        uses: dorny/test-reporter@v2
+        if: success() || failure()
+        with:
+          name: softtoken-signer-int-test
+          path: test-framework-working-dir/test-results/TEST-*.xml
+          reporter: java-junit
+
+      - name: Upload softtoken-signer-int-test report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: softtoken-signer-int-test-report-${{ github.run_number }}
+          path: |
+            test-framework-working-dir/allure-report/index.html
+            test-framework-working-dir/container-logs/
+            test-framework-working-dir/test-automation-exec.log
+
+      - name: Show Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v5.1
+        with:
+          task: display-results
+          pr-comment: true
+
   test-opmonitor:
     name: opmonitor-int-test
     runs-on: ubuntu-24.04
