--- a/src/service/softtoken-signer/softtoken-signer-int-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/service/softtoken-signer/softtoken-signer-int-test/src/intTest/resources/compose.intTest.yaml
@@ -39,11 +39,7 @@ services:
           memory: 512M
 
   signer:
-    build:
-      context: ./signer-container-files/
-      args:
-        - SIGNER_IMG=${SIGNER_IMG}
-      dockerfile: Dockerfile
+    image: ${SIGNER_IMG}
     pull_policy: always
     environment:
       - XROAD_HOST=signer
@@ -76,16 +72,13 @@ services:
       - ./signer-container-files/etc/xroad/globalconf:/etc/xroad/globalconf
 
   softtoken-signer:
-    build:
-      context: ./softtoken-signer-container-files/
-      args:
-        - SOFTTOKEN_SIGNER_IMG=${SOFTTOKEN_SIGNER_IMG}
-      dockerfile: Dockerfile
+    image: ${SOFTTOKEN_SIGNER_IMG}
     pull_policy: always
     environment:
+      - DEBUG=true
       - XROAD_COMMON_RPC_USE_TLS=false
       - XROAD_SOFTTOKEN_SIGNER_RPC_LISTEN_ADDRESS=0.0.0.0
-      - XROAD_SOFTTOKEN_SIGNER_KEYS_SYNC_RATE=3
+      - XROAD_SOFTTOKEN_SIGNER_KEYS_SYNC_RATE=3S
       - XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST=signer
       - QUARKUS_LOG_LEVEL=INFO
       - QUARKUS_LOG_CATEGORY__ORG_NIIS_XROAD_SIGNER_SOFTTOKEN__LEVEL=DEBUG
