--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -63,9 +63,9 @@ services:
     imageName: ss-configuration-client
     resources:
       requests:
-        memory: 64Mi
+        memory: 128Mi
       limits:
-        memory: 320Mi
+        memory: 448Mi
     ports:
       - port: 4099
         name: http
@@ -77,6 +77,7 @@ services:
     serviceAccount:
       annotations: { }
     env:
+      JAVA_OPTS: -Xmx50m -XX:MaxMetaspaceSize=100m
       XROAD_HOST: "configuration-client"
       XROAD_SECRET_STORE_HOST: "openbao"
       XROAD_CONFIGURATION_CLIENT_UPDATE_INTERVAL: "60"
@@ -100,9 +101,9 @@ services:
     imageName: ss-signer
     resources:
       requests:
-        memory: 64Mi
+        memory: 192Mi
       limits:
-        memory: 320Mi
+        memory: 512Mi
     ports:
       - port: 4099
         name: http
@@ -114,6 +115,7 @@ services:
     serviceAccount:
       annotations: { }
     env:
+      JAVA_OPTS: -Xmx64m -XX:MaxMetaspaceSize=128m
       XROAD_HOST: "signer"
       XROAD_SECRET_STORE_HOST: "openbao"
       XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client"
@@ -137,9 +139,9 @@ services:
     imageName: ss-proxy
     resources:
       requests:
-        memory: 64Mi
+        memory: 256Mi
       limits:
-        memory: 512Mi
+        memory: 1Gi
     ports:
       - port: 4099
         name: http
@@ -159,6 +161,7 @@ services:
     serviceAccount:
       annotations: { }
     env:
+      JAVA_OPTS: -Xmx512m -XX:MaxMetaspaceSize=140m
       XROAD_HOST: "proxy"
       XROAD_SECRET_STORE_HOST: "openbao"
       XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client"
@@ -192,9 +195,9 @@ services:
     imageName: ss-proxy-ui-api
     resources:
       requests:
-        memory: 64Mi
+        memory: 312Mi
       limits:
-        memory: 512Mi
+        memory: 768Mi
     ports:
       - port: 4000
         name: https
@@ -205,6 +208,7 @@ services:
     serviceAccount:
       annotations: { }
     env:
+      JAVA_OPTS: -Xmx256m -XX:MaxMetaspaceSize=200m
       DEBUG_PORT: "9999"
       XROAD_HOST: "proxy-ui-api"
       XROAD_SECRET_STORE_HOST: "openbao"
@@ -240,7 +244,7 @@ services:
     imageName: ss-monitor
     resources:
       requests:
-        memory: 64Mi
+        memory: 256Mi
       limits:
         memory: 512Mi
     ports:
@@ -253,6 +257,7 @@ services:
     serviceAccount:
       annotations: { }
     env:
+      JAVA_OPTS: -Xmx128m -XX:MaxMetaspaceSize=120m
       DEBUG_PORT: "9999"
       XROAD_HOST: "monitor"
       XROAD_SECRET_STORE_HOST: "openbao"
@@ -281,9 +286,9 @@ services:
     imageName: ss-op-monitor
     resources:
       requests:
-        memory: 64Mi
+        memory: 312Mi
       limits:
-        memory: 512Mi
+        memory: 768Mi
     ports:
       - port: 4099
         name: http
@@ -296,6 +301,7 @@ services:
     serviceAccount:
       annotations: { }
     env:
+      JAVA_OPTS: -Xmx350m -XX:MaxMetaspaceSize=100m
       DEBUG_PORT: "9999"
       XROAD_HOST: "opmonitor"
       XROAD_OP_MONITOR_LISTEN_ADDRESS: 0.0.0.0
@@ -322,9 +328,9 @@ services:
     imageName: ss-backup-manager
     resources:
       requests:
-        memory: 64Mi
+        memory: 256Mi
       limits:
-        memory: 512Mi
+        memory: 448Mi
     rbac:
       extraRules:
         - apiGroups: ["batch"]
@@ -347,6 +353,7 @@ services:
     skipDefaultMounts:
       - /var/lib/xroad
     env:
+      JAVA_OPTS: -Xmx50m -XX:MaxMetaspaceSize=64m
       XROAD_HOST: "backup-manager"
       XROAD_SECRET_STORE_HOST: "openbao"
       XROAD_SERVERCONF_DB_HOST: "db-serverconf"
