--- a/deployment/security-server/images/base-images/baseline/Dockerfile
+++ b/deployment/security-server/images/base-images/baseline/Dockerfile
@@ -20,6 +20,9 @@ RUN mkdir /var/log/xroad && \
     chown -R xroad:xroad /var/cache/xroad && \
     chown -R xroad:xroad /etc/xroad
 
+RUN curl -L -o /opt/jmx_prometheus_javaagent.jar \
+      https://github.com/prometheus/jmx_exporter/releases/download/1.5.0/jmx_prometheus_javaagent-1.5.0.jar
+
 # Copy license files from build context
 COPY --from=build /LICENSE.txt /opt/app/LICENSE.txt
 COPY --from=build /3RD-PARTY-NOTICES.txt /opt/app/3RD-PARTY-NOTICES.txt
