chore: add jmx exporter config to ss k8s helm chart
Refs: XRDDEV-3058

--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -408,3 +408,13 @@ persistentVolumeClaims:
   gpg-keys-pvc:
     accessMode: ReadWriteOnce
     storage: 128Mi
+
+jvmMetrics:
+  enabled: false
+  jmxExporter:
+    port: 9801
+    config: |
+      lowercaseOutputName: true
+      lowercaseOutputLabelNames: true
+      rules:
+        - pattern: ".*"
