--- a/development/k8s/terraform/environments/dev/override-values/security-server-values.yaml
+++ b/development/k8s/terraform/environments/dev/override-values/security-server-values.yaml
@@ -119,3 +119,6 @@ services:
       - mountPath: /etc/xroad/ssl/openbao.crt  # Mount as file
         subPath: openbao.crt
         name: backup-manager-openbao-tls-certificate
+
+jvmMetrics:
+  enabled: true
