--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,8 +8,23 @@
     mode: 0640
     force: no
 
-- name: install autologin
+- name: Ensure autologin installed (RHEL8)
+  become: yes
+  command: dnf -y install --refresh xroad-autologin
+  when:
+    - ansible_os_family == 'RedHat'
+    - ansible_distribution_major_version | int == 8
+
+- name: Ensure autologin latest (RHEL8)
+  become: yes
+  command: dnf -y upgrade xroad-autologin
+  when:
+    - ansible_os_family == 'RedHat'
+    - ansible_distribution_major_version | int == 8
+
+- name: Install autologin (non RHEL8)
   package: name=xroad-autologin state=latest
+  when: not (ansible_os_family == 'RedHat' and ansible_distribution_major_version | int == 8)
 
 - name: enable autologin service
   service: name=xroad-autologin enabled=yes
