--- a/src/package.json
+++ b/src/package.json
@@ -25,7 +25,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.32.0",
     "eslint-plugin-vuetify": "^2.5.1",
-    "happy-dom": "^15.11.7",
+    "happy-dom": "^20.0.2",
     "license-check-and-add": "~4.0.5",
     "mkdirp": "^3.0.1",
     "openapi-typescript-codegen": "^0.29.0",
@@ -36,15 +36,18 @@
     "typescript": "~5.7.2",
     "vite": "^6.0.3",
     "vite-plugin-vuetify": "^2.0.4",
-    "vitest": "^2.1.8",
+    "vitest": "^2.1.9",
     "vue-eslint-parser": "^9.4.3",
-    "vue-i18n": "^10.0.5",
+    "vue-i18n": "^10.0.8",
     "vue-tsc": "^2.1.10"
   },
   "pnpm": {
     "overrides": {
+      "axios": "~1.12.2",
+      "glob": "^10.5.0",
       "semver": "^7.5.3",
-      "cross-spawn": "7.0.5"
+      "cross-spawn": "7.0.5",
+      "vue-i18n": "10.0.8"
     }
   },
   "packageManager": "pnpm@9.15.2",
