--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ hibernate = "6.6.2.Final"
 mapstruct = "1.6.3"
 jackson = "2.18.2"
 mockito = "5.15.2"
-springBoot = "3.3.6"
+springBoot = "3.3.9"
 junitJupiter = "5.11.4"
 xmlUnit = "2.10.0"
 bouncyCastle = "1.80"
@@ -21,8 +21,8 @@ testAutomationFramework = "0.2.19"
 protoc = "4.29.0"
 grpc = "1.68.2"
 swaggerParser = "2.1.25"
-logback = "1.5.12"
-logbackAccess = "2.0.3"
+logback = "1.5.16"
+logbackAccess = "2.0.7"
 apacheCxf = "4.1.0"
 archUnitPlugin = "4.0.0"
 
@@ -102,7 +102,7 @@ apache-commonsConfiguration2 = { module = "org.apache.commons:commons-configurat
 apache-httpmime = { module = "org.apache.httpcomponents:httpmime", version = "4.5.14" }
 apache-cxfToolsValidator = { module = "org.apache.cxf:cxf-tools-validator", version.ref = "apacheCxf" }
 apache-cxfRtTransportsHttp = { module = "org.apache.cxf:cxf-rt-transports-http", version.ref = "apacheCxf" }
-apache-tikaCore = { module = "org.apache.tika:tika-core", version = "3.0.0" }
+apache-tikaCore = { module = "org.apache.tika:tika-core", version = "3.2.2" }
 apache-xmlsec = { module = "org.apache.santuario:xmlsec", version = "4.0.3" }
 apache-httpclient = { module = "org.apache.httpcomponents:httpclient", version = "4.5.14" }
 apache-httpasyncclient = { module = "org.apache.httpcomponents:httpasyncclient", version = "4.1.5" }
@@ -126,7 +126,7 @@ lombok = { module = "org.projectlombok:lombok", version = "1.18.36" }
 lombokMapstructBinding = { module = "org.projectlombok:lombok-mapstruct-binding", version = "0.2.0" }
 
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
-logback-access = { module = "ch.qos.logback.access:tomcat", version.ref = "logbackAccess" }
+logback-access-tomcat= { module = "ch.qos.logback.access:logback-access-tomcat", version.ref = "logbackAccess" }
 
 assertj-core = { module = "org.assertj:assertj-core", version = "3.27.3" }
 wiremock-standalone = { module = "org.wiremock:wiremock-standalone", version = "3.10.0" }
