--- a/src/security-server/admin-service/application/build.gradle
+++ b/src/security-server/admin-service/application/build.gradle
@@ -47,9 +47,7 @@ dependencies {
     implementation(libs.bucket4j.core)
     implementation(libs.swagger.parserV3)
     implementation(libs.jakarta.validationApi)
-    implementation(libs.logback.access){
-        exclude group: 'org.apache.tomcat', module: 'tomcat-catalina'
-    }
+    implementation(libs.logback.access.tomcat)
 
     testImplementation(platform(libs.springBoot.bom))
     testImplementation(project(":common:common-test"))
